@@ -27,7 +27,16 @@
     </text>
   </lang>
   <autodetect>
-  <!--no known parport probe information--></autodetect>
+    <parallel>
+      <manufacturer>Hewlett-Packard</manufacturer>
+      <model>hp LaserJet 4250</model>
+      <description>Hewlett-Packard LaserJet 4250</description>
+      <commandset>PJL,MLC,PCLXL,PCL,PJL,POSTSCRIPT</commandset>
+    </parallel>
+    <snmp>
+      <description>hp LaserJet 4250</description>
+    </snmp>
+  </autodetect>
   <functionality>A</functionality>
   <driver>Postscript</driver><!--verified--><!--no "contrib_url"-->
   <comments>
