@@ -1,3 +1,8 @@
+2005-05-25  Tim Waugh  <twaugh@redhat.com>
+
+	* printer/HP-LaserJet_4250.xml: Added IEEE 1284 and SNMP information
+	  from RH bug #157883.
+
 2005-05-19  Tim Waugh  <twaugh@redhat.com >
 
 	* printer/HP-DeskJet_3845.xml: Added IEEE 1284 information (RH
